# fontleak

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  run-browser-tests.yml
fontleak/: logger.py  main.py  schemas.py
fontleak/cssgen/: dynamic.py  static.py
fontleak/fontgen/: dynamic.py
templates/: dynamic-anim.css.jinja  dynamic-sfc.css.jinja  dynamic-staging.css.jinja  dynamic.css.jinja  static-anim.css.jinja  static.css.jinja  test-dynamic-all.html.jinja  test-dynamic-chrome.html.jinja  test-dynamic-safari.html.jinja  test-static-chrome.html.jinja  test-static-firefox.html.jinja  test-static-safari.html.jinja  test.html  test_dynamic_all.html.jinja
tests/: Dockerfile.firefox.test  Dockerfile.test  test_chrome.py  test_firefox.py
