[project]
name = "fontleak"
version = "0.1.0"
description = "Fontleak server: Fast exfiltration of text using CSS and Ligatures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.34.0",
]
authors = [
    {name = "Dragos Albastroiu", email = "adragos@protonmail.com"}
]
